--- a/updates/zh.html
+++ b/updates/zh.html
@@ -1,3 +1,12 @@
-<b><font color="red">???<u>!!!!</u>###</font></b><br/>
-<b>1</b><br/>
-<p>2</p>
+<!--<b><font color="red">???<u>!!!!</u>###</font></b><br/>-->
+<!--<b>1</b><br/>-->
+<!--<p>2<p>-->
+
+<p>增加 自定义SU命令<p>
+<p>增加 锁定桌面(仅支持root级别)<p>
+<p>锁定 默认安装器 支持ADB 级别(容易被系统还原<p>
+<p>Root模式 支持安装 单个拆分apk ,前提是已安装基础apk<p>
+<p>完成通知 显示 安装耗时<p>
+<p>向通知添加进度条以表明正在安装中。<p>
+<p>对 多用户 更好的支持(能在多用户中正常地运行<p>
+<p>默认安装器 添加 拦截 file://<p>
