--- a/updates/language-zh.html
+++ b/updates/language-zh.html
@@ -1,13 +1,20 @@
 <!--<b><font color="red">???<u>!!!!</u>###</font></b><br/>-->
 <!--<b>1</b><br/>-->
 <!--<p>2<p>-->
-
-<p>增加 自定义SU命令<p>
-<p>增加 锁定桌面(仅支持root级别)<p>
-<p>锁定 默认安装器 支持ADB 级别(容易被系统还原<p>
-<p>Root模式 支持安装 单个拆分apk ,前提是已安装基础apk<p>
-<p>完成通知 显示 安装耗时<p>
-<p>向通知添加进度条以表明正在安装中。<p>
-<p>对 多用户 更好的支持(能在多用户中正常地运行<p>
-<p>默认安装器 添加 拦截 file://<p>
-<p>安装界面 增加显示安装包路径(长按包名显示)<p>
+<!--<p>增加 自定义SU命令<p>-->
+<!--<p>增加 锁定桌面(仅支持root级别)<p>-->
+<!--<p>锁定 默认安装器 支持ADB 级别(容易被系统还原<p>-->
+<!--<p>Root模式 支持安装 单个拆分apk ,前提是已安装基础apk<p>-->
+<!--<p>完成通知 显示 安装耗时<p>-->
+<!--<p>向通知添加进度条以表明正在安装中。<p>-->
+<!--<p>对 多用户 更好的支持(能在多用户中正常地运行<p>-->
+<!--<p>默认安装器 添加 拦截 file://<p>-->
+<!--<p>安装界面 增加显示安装包路径(长按包名显示)<p>-->
+<p>修改 安装界面 UI<p>
+<p>添加 自定义安装来源<p>
+<p>安装界面 按返回键可返回<p>
+<p>更改解析方式<p>
+<p>尝试兼容Android12<p>
+<p>修改写入大小，提高安装速度<p>
+<p>默认禁用 静默安装<p>
+<p>修复多个bug<p>
