--- a/updates/language-zh.html
+++ b/updates/language-zh.html
@@ -10,11 +10,4 @@
 <!--<p>对 多用户 更好的支持(能在多用户中正常地运行<p>-->
 <!--<p>默认安装器 添加 拦截 file://<p>-->
 <!--<p>安装界面 增加显示安装包路径(长按包名显示)<p>-->
-<p>修改 安装界面 UI<p>
-<p>添加 自定义安装来源<p>
-<p>安装界面 按返回键可返回<p>
-<p>更改解析方式<p>
-<p>尝试兼容Android12<p>
-<p>修改写入大小，提高安装速度<p>
-<p>默认禁用 静默安装<p>
-<p>修复多个bug<p>
+<p>修复bug<p>
